# vads-transcribe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements-diarization.txt  requirements.txt  setup_diarization.py
.claude/rules/: asr-ml-pipeline.md  auth-security.md  fastapi-server.md  git-conventions.md  huey-queues.md  language-policy.md  python-conventions.md  react-frontend.md  sqlite-repository.md  testing.md
.claude/skills/api-design-principles/: SKILL.md
.claude/skills/api-error-handling/: SKILL.md
.claude/skills/api-security-hardening/: SKILL.md
.claude/skills/api-testing/: SKILL.md
.claude/skills/architecture-patterns/: SKILL.md
.claude/skills/csrf-protection/: SKILL.md
.claude/skills/defense-in-depth-validation/: SKILL.md
.claude/skills/dependency-upgrade/: SKILL.md
.claude/skills/dependency-upgrade/references/: compatibility-matrix.md  cooldown-config-guide.md  package-manager-security.md  secrets-and-containers.md  socket-cli-guide.md  staged-upgrades.md  supply-chain-security.md  testing-strategy.md
.claude/skills/dependency-upgrade/templates/: bunfig-security.tmpl  dependabot-security.tmpl  devcontainer-security.tmpl  npmrc-security.tmpl  pnpm-workspace-security.tmpl  renovate-security.tmpl  socket-fix-ci.tmpl  socket-scan-ci.tmpl  yarnrc-security.tmpl
.claude/skills/idempotency-handling/: SKILL.md
.claude/skills/logging-best-practices/: SKILL.md
.claude/skills/logging-best-practices/references/: advanced-logging.md
.claude/skills/playwright/: SKILL.md  package.json
.claude/skills/react-best-practices/: SKILL.md
.claude/skills/rest-api-design/: SKILL.md
.claude/skills/root-cause-tracing/: SKILL.md
.claude/skills/security-headers-configuration/: SKILL.md
.claude/skills/security-headers-configuration/references/: python-apache.md
.claude/skills/systematic-debugging/: SKILL.md
.claude/skills/tanstack-query/: SKILL.md
.claude/skills/tanstack-query/templates/: package.json
.claude/skills/test-quality-analysis/: SKILL.md
.claude/skills/verification-before-completion/: SKILL.md
.claude/skills/vulnerability-scanning/: SKILL.md
.claude/skills/xss-prevention/: SKILL.md
.claude/skills/xss-prevention/references/: nodejs-advanced.md  python-sanitization.md
.claude/skills/zod/references/: package.json
.playwright-mcp/: page-2026-07-09T10-52-35-118Z.yml  page-2026-07-09T10-52-58-521Z.yml  page-2026-07-09T10-54-22-799Z.yml  page-2026-07-09T10-54-57-596Z.yml  page-2026-07-09T10-56-02-486Z.yml  page-2026-07-09T10-57-27-401Z.yml  page-2026-07-09T10-58-35-375Z.yml  page-2026-07-09T10-58-53-890Z.yml  page-2026-07-09T11-02-01-008Z.yml  page-2026-07-09T11-02-21-010Z.yml  page-2026-07-09T11-04-31-862Z.yml  page-2026-07-09T11-05-04-598Z.yml  page-2026-07-09T11-21-55-558Z.yml  page-2026-07-09T11-22-48-310Z.yml  page-2026-07-09T11-31-29-176Z.yml  page-2026-07-09T11-35-51-376Z.yml  page-2026-07-09T11-36-51-701Z.yml
config/: english_words.txt  glossary.json  it_ai_terms.txt  russian_words.txt
deploy/: .env.example  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: auth.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx  brand.tsx  icons.tsx  ui.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  Glossary.tsx  Login.tsx  RouteAConfirm.tsx  Settings.tsx  SingleSubmit.tsx  Sources.tsx  TranscriptViewer.tsx  Upload.tsx
frontend/src/pages/dashboard/: ActiveJobCard.tsx  DateFilter.tsx  VoiceGlyph.tsx  helpers.ts
frontend/src/pages/sources/: FolderPicker.tsx  LocalSource.tsx  PresetChips.tsx  YandexSource.tsx  index.tsx
gigaam_transcriber/: __init__.py  _paths.py  audio_processor.py  bloodtranscripts_cli.py  cli.py  cli_ui.py  confidence.py  data_models.py  decode.py  dialogscribe_cli.py  diarization.py  exceptions.py  formatters.py  fusion.py  glossary.py  glossary_grow.py  l0.py  manifest.py  onnx_backend.py  onnx_encoder.py  segment_merger.py  speaker_mapping.py  stage_timing.py  text_quality.py  transcriber.py  utils.py  versions.py  voiceprint.py  whisper_asr.py
gigaam_transcriber/server/: __init__.py  app.py  auth.py  config.py  crypto.py  db.py  fs_api.py  galleries_api.py  gallery_builder.py  glossary_api.py  health.py  ingest_api.py  ingest_common.py  job_runner.py  jobs.py  local_watch.py  media.py  presets.py  queues.py  recordings.py  repository.py  retention.py  run_gpu_worker.py  security.py  static.py  tasks.py  transcripts.py  upload_stream.py  uploads.py  workers.py  yandex.py  zoom_scan.py
tests/: __init__.py  conftest.py  test_audio_processor.py  test_batch_format_ext.py  test_bloodtranscripts_cli.py  test_confidence.py  test_data_models.py  test_decode.py  test_device_repair.py  test_dialogscribe_cli.py  test_diar_tuning.py  test_diarization.py  test_exceptions.py  test_formatters.py  test_fusion.py  test_glossary.py  test_glossary_grow.py  test_infra.py  test_l0.py  test_manifest.py  test_provenance_flags.py  test_route_a.py  test_segment_merger.py  test_server_auth.py  test_server_galleries.py  test_server_glossary.py  test_server_hardening.py  test_server_jobs.py  test_server_local_watch.py  test_server_profiles.py  test_server_repository.py  test_server_retention.py  test_server_spa.py  test_server_uploads.py  test_server_workers.py  test_server_yandex.py  test_speaker_mapping.py  test_text_quality.py  test_transcriber.py  test_voiceprint.py  (+1 more)
