[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaam-transcriber"
version = "0.1.0"
description = "Микробиблиотека для транскрипции аудио/видео на базе GigaAM с диаризацией спикеров"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GigaAM Transcriber"}
]
keywords = [
    "transcription",
    "speech-to-text",
    "asr",
    "gigaam",
    "russian",
    "diarization",
    "pyannote",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "huggingface_hub>=0.20.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1.0",
    "speechbrain>=1.0.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "gigaam-transcriber[diarization,dev]",
]

[project.scripts]
gigaam-transcribe = "gigaam_transcriber.cli:main"
gigaam-batch = "gigaam_transcriber.cli:batch_main"
gigaam-ui = "gigaam_transcriber.cli_ui:main"

[project.urls]
# TODO: Replace with actual repository URLs
Homepage = "https://github.com/yaruslove/DialogScribe"
Documentation = "https://github.com/yaruslove/DialogScribe#readme"
Repository = "https://github.com/yaruslove/DialogScribe"

[tool.setuptools.packages.find]
where = ["."]
include = ["gigaam_transcriber*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | GigaAM
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that require GPU",
    "requires_hf_token: marks tests that require HuggingFace token",
]
