[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaam-transcriber"
version = "0.1.0"
description = "DialogScribe — транскрипция созвонов на базе GigaAM: диаризация, слой качества, web-интерфейс"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ponimaiu"}
]
keywords = [
    "transcription",
    "speech-to-text",
    "asr",
    "gigaam",
    "russian",
    "diarization",
    "pyannote",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "huggingface_hub>=0.20.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
diarization = [
    # Незыблемый пин: 4.0.6 ломает GigaAM VAD ('generator' has no get_timeline).
    "pyannote.audio==4.0.5",
    "speechbrain>=1.0.0",
    "scikit-learn>=1.3.0",
]
second-opinion = [
    # L2 «второе мнение» — локальный multilingual Whisper (CPU/int8), перечитывает
    # сегменты-кандидаты (с латиницей), fusion правит латиницу/числа под I1.
    "faster-whisper>=1.0",
]
server = [
    # Web-сервер (M2+): FastAPI api + Huey 2-очереди + secure-by-default auth.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "huey>=2.5",
    "itsdangerous>=2.1",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "cryptography>=42",
    "yadisk>=3.4.1",
    "sse-starlette>=2.0",
    "httpx>=0.27",  # OAuth token-exchange (yandex.py)
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "gigaam-transcriber[diarization,second-opinion,server,dev]",
]

[project.scripts]
# Единый CLI — рекомендуемая точка входа.
dialogscribe = "gigaam_transcriber.dialogscribe_cli:main"
# gpu-воркер с boot-guard (ровно один держатель модели).
dialogscribe-gpu-worker = "gigaam_transcriber.server.run_gpu_worker:main"

[project.urls]
Homepage = "https://github.com/stay-metal/vads-transcribe"
Documentation = "https://github.com/stay-metal/vads-transcribe#readme"
Repository = "https://github.com/stay-metal/vads-transcribe"

[tool.setuptools.packages.find]
where = ["."]
include = ["gigaam_transcriber*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | GigaAM
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
# GigaAM — вендоренный клон, не линтим (симметрично exclude у black).
exclude = ["GigaAM"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
# E501/B008 — длина строк/Depends-в-дефолтах (FastAPI-идиома).
# E402 — намеренные lazy-imports (os.environ.setdefault до `import torch`, тяжёлые
#   модули внутри функций — см. .claude/rules/python-conventions.md).
# B904 — HTTPException/UsageError в except намеренно без `from` (не течёт внутренняя причина).
# N806 — ML-код использует заглавные локальные имена для тензоров/матриц.
# E741 — единичный тестовый счётчик.
ignore = ["E501", "B008", "E402", "B904", "N806", "E741"]

[tool.mypy]
python_version = "3.10"
# warn_return_any выкл: torch/numpy/gigaam/speechbrain без stubs возвращают Any —
# no-any-return был бы шумом на границе с нетипизированными ML-зависимостями.
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# requires_model скипается по умолчанию (юнит-прогон не грузит ML-модель и не ходит
# в сеть); запуск модельных: pytest -m requires_model.
addopts = "-v --tb=short -m 'not requires_model'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that require GPU",
    "requires_hf_token: marks tests that require HuggingFace token",
    "requires_model: marks tests that require the GigaAM model (deselected by default)",
]
